# seed

./: .gitignore  Makefile
src/: seed.c
templates/18f1320/: blink.c  build.bat
templates/atmega2560/: Makefile  blink.c  build.bat
templates/atmega328p/: Makefile  blink.c  make.bat
templates/rp2040/: CMakeLists.txt  blink.c  build.bat  flash.bat
